template inheritance  with static files in django

--- a/templateInheritance/core/templates/core/about.html
+++ b/templateInheritance/core/templates/core/about.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-</head>
-<body>
-    <h2>I am about Page</h2>
-</body>
-</html>
+{% extends "core/base.html" %}
+{% block title %}
+About
+{% endblock title %}
+
+{% block content %}
+<h2>I am New About Page</h2>
+{% endblock content %}
