--- a/templateInheritance/core/templates/core/home.html
+++ b/templateInheritance/core/templates/core/home.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-<body>
-    <h2>I am home Page</h2>
-</body>
-</html>
+{% extends "core/base.html" %}
+
+{% block title %}
+{{block.super}} Home
+{% endblock title %}
+
+{% block content %}
+<h2>I am New Home Page</h2>
+{% endblock content %}
