--- a/templateInheritance/core/templates/core/base.html
+++ b/templateInheritance/core/templates/core/base.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Other{% endblock title %}</title>
+    <link rel="stylesheet" href="{% static 'core/css/fontAwesome.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/bootstrap.css' %}">
     {% block corecss %}<link rel="stylesheet" href="{% static 'core/css/core.css' %}">{% endblock corecss %}
 </head>
 <body>
@@ -16,5 +18,23 @@
         </ul>
     </nav>
     {% block content %}{% endblock content %}
+    <button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
+<button type="button" class="btn btn-link">Link</button>
+<i class="fa-solid fa-house"></i>
+<i class="fa-brands fa-facebook"></i>
+
+
+<script src="{% static 'core/js/jquery.js' %}"></script>
+<script src="{% static 'core/js/popper.js' %}"></script>
+<script src="{% static 'core/js/fontAwesome.js' %}"></script>
+<script src="{% static 'core/js/bootstrap.js' %}"></script>
+
 </body>
 </html>
