How to include template within template using include Tag in Django

--- a/templateInheritance/core/templates/core/home.html
+++ b/templateInheritance/core/templates/core/home.html
@@ -6,4 +6,5 @@
 
 {% block content %}
 <h2>I am New Home Page</h2>
+{% include "core/topcourse.html" with p="php" d="django" only %}
 {% endblock content %}
